@@ -186,9 +186,9 @@ print "</div>\n";
 
 
 print "<hr/>";
-print "<a href='slices.php'>Back to All slices</a>";
+print "<p><a href='slices.php'>Back to All slices</a>";
 print "<br/>";
-print "<a href='slice.php?slice_id=$slice_id'>Back to Slice $slice_name</a>";
+print "<a href='slice.php?slice_id=$slice_id'>Back to Slice <i>$slice_name</i></a></p>";
 include("footer.php");
 
 
