@@ -125,8 +125,9 @@ if (isset($am_id) && $am_id ) {
 print "<p><a href='raw-sliverstatus.php?slice_id=".$slice_id.$am_id_str."'>Raw SliverStatus</a>";
 print "</p>";
 
-print "<p><a href='slices.php'>Back to All slices</a><br/>";
-print "<a href='slice.php?slice_id=$slice_id'>Back to Slice $slice_name</a></p>";
+print "<p><a href='slices.php'>Back to All slices</a>";
+print "<br/>";
+print "<a href='slice.php?slice_id=$slice_id'>Back to Slice <i>$slice_name</i></a></p>";
 
 include("footer.php");
 ?>
